k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sap-repository
  namespace: di3
spec:
  selector:
    app: sap-repository
  ports:
    - port: 8000
      targetPort: 8000
